# chess-lab

./: .gitignore  README.md  ai_test.cpp  build.ps1  chess.hpp  engine_cli.cpp  main.cpp  perft.cpp  run.ps1
.github/workflows/: ci.yml
rl/: pyproject.toml
rl/src/chessrl/: __init__.py  arena.py  encoding.py  mcts.py  model.py  pg.py  players.py  selfplay.py  train.py
rl/tests/: test_arena.py  test_encoding.py  test_mcts.py  test_model.py  test_perft.py  test_pg.py
