[project]
name = "chessrl"
version = "0.1.0"
description = "AlphaZero-style self-play reinforcement learning for chess, paired with the C++ engine in this repository"
requires-python = ">=3.9"
dependencies = [
    "chess>=1.10",
    "numpy>=1.24",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
